--- a/config.json
+++ b/config.json
@@ -21,6 +21,7 @@
         "slug": "hello-world",
         "name": "Hello World",
         "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -31,6 +32,7 @@
         "slug": "two-fer",
         "name": "Two Fer",
         "uuid": "ea369b85-b180-48ca-b602-c40811fc865f",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -42,6 +44,7 @@
         "slug": "leap",
         "name": "Leap",
         "uuid": "241eb25c-925b-4395-876c-c1dfe84e1c85",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -53,6 +56,7 @@
         "slug": "accumulate",
         "name": "Accumulate",
         "uuid": "a21065ca-6aad-46b2-ada0-6a62abfcea2b",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -63,6 +67,7 @@
         "slug": "collatz-conjecture",
         "name": "Collatz Conjecture",
         "uuid": "63c77b77-5a02-40ce-b5f6-372a5b3ae13d",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -75,6 +80,7 @@
         "slug": "raindrops",
         "name": "Raindrops",
         "uuid": "63259a44-cdec-4e25-ab0e-eddc6f9a9ca1",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -87,6 +93,7 @@
         "slug": "rna-transcription",
         "name": "Rna Transcription",
         "uuid": "8e9a98b1-bf4f-4c94-a258-a8618cc37f55",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -99,6 +106,7 @@
         "slug": "bob",
         "name": "Bob",
         "uuid": "fced3620-26f2-4439-822c-27e1d59e24e1",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -110,6 +118,7 @@
         "slug": "strain",
         "name": "Strain",
         "uuid": "c10bfbab-0b58-4fcb-aadc-304bd4b73cfc",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -121,6 +130,7 @@
         "slug": "hamming",
         "name": "Hamming",
         "uuid": "8b7390fc-da44-4f02-ad17-a7eb5c19cf2b",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -131,6 +141,7 @@
         "slug": "space-age",
         "name": "Space Age",
         "uuid": "f276e064-a6d4-4a50-b53b-f36c1b30c62f",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -141,6 +152,7 @@
         "slug": "darts",
         "name": "Darts",
         "uuid": "72c8d390-4f07-4ec2-8e5a-4f57cf04e29c",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -152,6 +164,7 @@
         "slug": "queen-attack",
         "name": "Queen Attack",
         "uuid": "7fd5455c-46d2-4484-9c7d-04fa6ef305f4",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -163,6 +176,7 @@
         "slug": "diamond",
         "name": "Diamond",
         "uuid": "fa949101-5771-477c-9221-0112dcbbdcde",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -174,6 +188,7 @@
         "slug": "difference-of-squares",
         "name": "Difference Of Squares",
         "uuid": "ab852e36-3968-403f-93f5-53c7ecafa4c8",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -186,6 +201,7 @@
         "slug": "series",
         "name": "Series",
         "uuid": "9ca527d7-5065-4856-8c95-07deb664da7e",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -196,6 +212,7 @@
         "slug": "custom-set",
         "name": "Custom Set",
         "uuid": "453aad9b-044e-473e-87c1-0193afb2cb13",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -206,6 +223,7 @@
         "slug": "triangle",
         "name": "Triangle",
         "uuid": "2972e0de-b5ca-4fdd-9dbf-648937763394",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -216,6 +234,7 @@
         "slug": "prime-factors",
         "name": "Prime Factors",
         "uuid": "b6ff9201-e0fc-43e5-9501-cd0509f9ce1c",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -226,6 +245,7 @@
         "slug": "roman-numerals",
         "name": "Roman Numerals",
         "uuid": "d8ee01b3-307e-4835-a7cd-331e771111ae",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -237,6 +257,7 @@
         "slug": "saddle-points",
         "name": "Saddle Points",
         "uuid": "51061693-8f01-4dc6-a4c0-0f76771423f8",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -247,6 +268,7 @@
         "slug": "complex-numbers",
         "name": "Complex Numbers",
         "uuid": "5fc48c1b-0e1b-47b3-b30a-5281ec364aad",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -259,6 +281,7 @@
         "slug": "rational-numbers",
         "name": "Rational Numbers",
         "uuid": "8b379d6e-196f-4ccc-808d-91fb6255e474",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -269,6 +292,7 @@
         "slug": "beer-song",
         "name": "Beer Song",
         "uuid": "2fedc6bf-6006-4c2d-bba7-9c66265b6f62",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 7,
         "topics": [
@@ -280,6 +304,7 @@
         "slug": "anagram",
         "name": "Anagram",
         "uuid": "8f0570ae-223f-4da4-8b84-268b797b28ad",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -292,6 +317,7 @@
         "slug": "sieve",
         "name": "Sieve",
         "uuid": "9cfae4bf-cff8-49bc-aee9-a37d553cef81",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -303,6 +329,7 @@
         "slug": "change",
         "name": "Change",
         "uuid": "a71317c2-4d85-4449-811e-57d3a54a4d12",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -313,6 +340,7 @@
         "slug": "meetup",
         "name": "Meetup",
         "uuid": "249d0c9f-dadc-4168-ba9b-0c6bfe83618d",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -324,6 +352,7 @@
         "slug": "palindrome-products",
         "name": "Palindrome Products",
         "uuid": "bc74b87d-d257-41e5-9233-10324a78367c",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -336,6 +365,7 @@
         "slug": "minesweeper",
         "name": "Minesweeper",
         "uuid": "2cf5d5ba-9820-4918-ac91-811b2a434655",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 7,
         "topics": [
@@ -349,6 +379,7 @@
         "slug": "dominoes",
         "name": "Dominoes",
         "uuid": "767acde9-cbca-4cdd-afed-125f14e92e10",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 8,
         "topics": [
@@ -359,6 +390,7 @@
         "slug": "armstrong-numbers",
         "name": "Armstrong Numbers",
         "uuid": "a639ce2f-48e3-46cd-9d11-955ba2a9eaaa",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -370,6 +402,7 @@
         "slug": "perfect-numbers",
         "name": "Perfect Numbers",
         "uuid": "8c58533a-7a1f-11e8-adc0-fa7ae01bbebc",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -381,6 +414,7 @@
         "slug": "sum-of-multiples",
         "name": "Sum Of Multiples",
         "uuid": "5af1c90a-f98d-4682-885b-9770c9223194",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -391,6 +425,7 @@
         "slug": "parallel-letter-frequency",
         "name": "Parallel Letter Frequency",
         "uuid": "be69c23b-7559-44fe-9e21-94a865199de7",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -402,6 +437,7 @@
         "slug": "forth",
         "name": "Forth",
         "uuid": "95335b21-a840-45f3-8d65-d7de7aec228a",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -414,6 +450,7 @@
         "slug": "pascals-triangle",
         "name": "Pascals Triangle",
         "uuid": "589b763c-2b3a-11e8-b467-0ed5f89f718b",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -426,6 +463,7 @@
         "slug": "secret-handshake",
         "name": "Secret Handshake",
         "uuid": "580309f9-65f1-480b-bdb6-c14846963c33",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 1,
         "topics": [
@@ -438,6 +476,7 @@
         "slug": "allergies",
         "name": "Allergies",
         "uuid": "51af2614-e349-4e90-b917-177a6017e786",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -449,6 +488,7 @@
         "slug": "bank-account",
         "name": "Bank Account",
         "uuid": "a7e2e89c-c599-4e30-a944-a9d4a98f2b94",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -461,6 +501,7 @@
         "slug": "poker",
         "name": "Poker",
         "uuid": "693be489-153f-409d-9c2d-52b718997785",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -472,6 +513,7 @@
         "slug": "connect",
         "name": "Connect",
         "uuid": "211c12df-5254-4abf-850b-a9596b2aba3a",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 8,
         "topics": [
@@ -484,6 +526,7 @@
         "slug": "list-ops",
         "name": "List Ops",
         "uuid": "e80410bb-45e5-4007-ad97-e7470dd87ed5",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -494,6 +537,7 @@
         "slug": "protein-translation",
         "name": "Protein Translation",
         "uuid": "3c79d343-a180-4cab-9622-04203cbc564a",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -506,6 +550,7 @@
         "slug": "scrabble-score",
         "name": "Scrabble Score",
         "uuid": "4f5045d5-9ae1-4bdb-ac0b-a5d279a60ed8",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -517,6 +562,7 @@
         "slug": "all-your-base",
         "name": "All Your Base",
         "uuid": "85e23906-6fd8-486a-add8-a6c932cef7e3",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -527,6 +573,7 @@
         "slug": "spiral-matrix",
         "name": "Spiral Matrix",
         "uuid": "625ad6f2-c9e8-4129-a290-057209f941c5",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 8,
         "topics": [
@@ -537,6 +584,7 @@
         "slug": "gigasecond",
         "name": "Gigasecond",
         "uuid": "24ae9a43-4e1c-418b-97f6-2c83dbc0e14a",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -547,6 +595,7 @@
         "slug": "grade-school",
         "name": "Grade School",
         "uuid": "67bbcc69-31b7-41f2-a8e1-5a07d30e00d6",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -557,6 +606,7 @@
         "slug": "sublist",
         "name": "Sublist",
         "uuid": "2f974a71-a432-410b-a432-1e44950ad018",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -568,6 +618,7 @@
         "slug": "largest-series-product",
         "name": "Largest Series Product",
         "uuid": "b312ff0e-90e3-4dd8-99dc-df4a9deb1907",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -579,6 +630,7 @@
         "slug": "satellite",
         "name": "Satellite",
         "uuid": "f69d4fd0-3547-4be0-8d09-f368b80b9df7",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -589,6 +641,7 @@
         "slug": "zipper",
         "name": "Zipper",
         "uuid": "b6c242d3-40d5-484d-8466-1a32d2332288",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 8,
         "topics": [
@@ -601,6 +654,7 @@
         "slug": "isbn-verifier",
         "name": "Isbn Verifier",
         "uuid": "ba4cd1e4-b5f0-4efc-a4c8-58c5252cae9e",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -611,6 +665,7 @@
         "slug": "run-length-encoding",
         "name": "Run Length Encoding",
         "uuid": "13327e7d-0c07-4520-9b55-f9195b6224c3",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -621,6 +676,7 @@
         "slug": "simple-linked-list",
         "name": "Simple Linked List",
         "uuid": "56a794de-40ee-4ff2-a1dd-f9b83f62d4b0",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -633,6 +689,7 @@
         "slug": "clock",
         "name": "Clock",
         "uuid": "df90c039-8629-497a-a809-5ba2d1f8d52f",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -644,6 +701,7 @@
         "slug": "variable-length-quantity",
         "name": "Variable Length Quantity",
         "uuid": "1acd7529-c487-4bea-9146-620b8ad5ef34",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -656,6 +714,7 @@
         "slug": "luhn",
         "name": "Luhn",
         "uuid": "e938c3e6-0b0f-498e-a3ec-47251f5bb55c",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -666,6 +725,7 @@
         "slug": "pythagorean-triplet",
         "name": "Pythagorean Triplet",
         "uuid": "d1afdffa-0340-43b7-8015-4d706c10b8da",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -677,6 +737,7 @@
         "slug": "atbash-cipher",
         "name": "Atbash Cipher",
         "uuid": "d8e38780-d04e-43fc-8606-97dc71e4974b",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -688,6 +749,7 @@
         "slug": "nth-prime",
         "name": "Nth Prime",
         "uuid": "8600a843-ec71-4f1a-b9fe-2ed515035101",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -699,6 +761,7 @@
         "slug": "transpose",
         "name": "Transpose",
         "uuid": "9af2325d-0450-45a3-a0da-8a18fafa0b7f",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -710,6 +773,7 @@
         "slug": "word-count",
         "name": "Word Count",
         "uuid": "43df8921-f0c3-4a0c-9bdf-eb89405049ad",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -722,6 +786,7 @@
         "slug": "etl",
         "name": "Etl",
         "uuid": "60fc4ea6-28b0-4914-bcc3-a0caefca3cb5",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -734,6 +799,7 @@
         "slug": "circular-buffer",
         "name": "Circular Buffer",
         "uuid": "058b48a9-03ec-43bc-88eb-9dbce8b79e59",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 7,
         "topics": [
@@ -745,6 +811,7 @@
         "slug": "phone-number",
         "name": "Phone Number",
         "uuid": "668f3947-3142-485e-89f8-e0e5060be29d",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": [
@@ -756,6 +823,7 @@
         "slug": "robot-simulator",
         "name": "Robot Simulator",
         "uuid": "a2d4ca29-54e2-4969-bfc9-ee483acf9caf",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 4,
         "topics": [
@@ -768,6 +836,7 @@
         "slug": "rotational-cipher",
         "name": "Rotational Cipher",
         "uuid": "8ad0c97b-189d-46ac-bb72-2c72f1fe4728",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 5,
         "topics": [
@@ -779,6 +848,7 @@
         "slug": "crypto-square",
         "name": "Crypto Square",
         "uuid": "a534bd4a-8a72-11e8-9a94-a6cf71072f73",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -790,6 +860,7 @@
         "slug": "rail-fence-cipher",
         "name": "Rail Fence Cipher",
         "uuid": "9bb14014-9732-11e8-9eb6-529269fb1459",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 6,
         "topics": [
@@ -801,6 +872,7 @@
         "slug": "book-store",
         "name": "Book Store",
         "uuid": "21db1eaa-db00-49fc-9ec5-c2913a9ff616",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 7,
         "topics": [
@@ -811,6 +883,7 @@
         "slug": "grains",
         "name": "Grains",
         "uuid": "c3070adc-d434-4989-8d6b-d9e483e32d1c",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -822,6 +895,7 @@
         "slug": "isogram",
         "name": "Isogram",
         "uuid": "94b997bb-8e8d-4519-ba97-199d0f35a80a",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -834,6 +908,7 @@
         "slug": "nucleotide-count",
         "name": "Nucleotide Count",
         "uuid": "d3cbfc9a-a495-4bf2-87d0-811d5f71fda6",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -845,6 +920,7 @@
         "slug": "pangram",
         "name": "Pangram",
         "uuid": "9c092a14-475b-4b1b-ac4b-fb19467367ff",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 2,
         "topics": [
@@ -857,6 +933,7 @@
         "slug": "bracket-push",
         "name": "Bracket Push",
         "uuid": "f93f5f18-3e3b-11e8-b467-0ed5f89f718b",
+        "practices": [],
         "prerequisites": [],
         "difficulty": 3,
         "topics": []
