--- a/exercises/practice/grade-school/.meta/tests.toml
+++ b/exercises/practice/grade-school/.meta/tests.toml
@@ -3,8 +3,11 @@
 # Adding a student adds them to the sorted roster
 "6d0a30e4-1b4e-472e-8e20-c41702125667" = true
 
+# The test doesn't make sense in its current form, please see
+# https://github.com/exercism/problem-specifications/issues/1763
+# 
 # A student can't be in two different grades
-"c125dab7-2a53-492f-a99a-56ad511940d8" = true
+"c125dab7-2a53-492f-a99a-56ad511940d8" = false
 
 # Adding more student adds them to the sorted roster
 "233be705-dd58-4968-889d-fb3c7954c9cc" = true
