--- a/config.json
+++ b/config.json
@@ -947,5 +947,16 @@
   },
   "concepts": [],
   "key_features": [],
-  "tags": []
+  "tags": [
+      "paradigm/functional",
+      "typing/dynamic",
+      "typing/strong",
+      "execution_mode/compiled",
+      "platform/windows",
+      "platform/mac",
+      "platform/linux",
+      "runtime/beam",
+      "used_for/backends",
+      "used_for/embedded_systems"
+  ]
 }
