--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     outputs:
       otps: ${{ steps.versions.outputs.versions }}
     steps:
+    - name: Clone the repository
+      uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
     - name: Get latest OTP versions
       id: versions
       env: 
